# r-place-gigapixel

./: .gitignore  README.md  package.json  snowpack.config.mjs
blender/: exr_to_png.blend  exr_to_png.blend1  wallpaper.blend  wallpaper.blend1
combine_images/: merge.ipynb  pyproject.toml
create-dzi/: .gitignore  package.json  tsconfig.json
create-dzi/src/: main.ts
src/: index.html  main.js  site.webmanifest  socicon.css  styles.scss
website/src/: styles.scss
website/src/images/: rplace.dzi
